Time: 9 ms (71.31%), Space: 45.5 MB (85.59%) - LeetHub