@@ -1,6 +1,6 @@
 class Solution {
     public List<List<Integer>> mergeSimilarItems(int[][] items1, int[][] items2) {
-        Map<Integer, Integer> itemMap = new HashMap<>();
+        Map<Integer, Integer> itemMap = new TreeMap<>();
 
         for (int[] item : items1) {
             itemMap.put(item[0], item[1]);
@@ -12,10 +12,9 @@ class Solution {
 
         List<List<Integer>> sortedList = itemMap.entrySet()
             .stream()
-            .sorted(Comparator.comparing(Map.Entry::getKey))
-            .map(e -> Arrays.asList(e.getKey(), e.getValue()))
+            .map(e -> List.of(e.getKey(), e.getValue()))
             .toList();
-            
+
         return sortedList;
     }
 }
